--- a/Pages/Novena/novena.less
+++ b/Pages/Novena/novena.less
@@ -205,4 +205,21 @@
             text-align: center;
         }
     }
+
+    .pope-st-gregory-everyday-header {
+        margin-top: 2rem;
+        border-bottom: solid black 1px;
+
+        @media @tablet {
+            display: none;
+        }
+    }
+
+    .pope-st-gregory-everyday {
+        margin-top: 5px;
+
+        @media @tablet {
+            margin-top: 2rem;
+        }
+    }
 }
